@@ -15,7 +15,6 @@ import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 /**
  * Service class that handles movie-related business logic and interactions with repositories and external services.
@@ -26,15 +25,13 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 public class MovieService {
 
+    private static final String SMALL_IMAGE_FILE = ".webp";
+    private static final String BIG_IMAGE_FILE = " big.webp";
+
     /**
      * Repository for movie entities
      */
     private final MovieRepository movieRepository;
-
-    /**
-     * Adapter for converting between MovieDTO and MovieEntity
-     */
-    private final MovieAdapter movieAdapter;
 
     /**
      * Service for interacting with AWS S3 bucket
@@ -62,7 +59,7 @@ public class MovieService {
      */
     public MovieDTO saveMovie(MovieDTO dto, MultipartFile small, MultipartFile big) {
         Set<RoleEntity> roleEntities = roleAdapter.toEntities(dto.getRoleDTO());
-        MovieEntity entity = movieAdapter.dtoToEntity(dto);
+        MovieEntity entity = MovieAdapter.dtoToEntity(dto);
 
         for (RoleEntity r : roleEntities)
             r.setMovie(entity);
@@ -71,12 +68,12 @@ public class MovieService {
         entity = movieRepository.save(entity);
 
         try {
-            s3Service.uploadFile(dto.getName() + ".webp", small);
-            s3Service.uploadFile(dto.getName() + " big.webp", big);
+            s3Service.uploadFile(dto.getName() + SMALL_IMAGE_FILE, small);
+            s3Service.uploadFile(dto.getName() + BIG_IMAGE_FILE, big);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        return movieAdapter.entityToDTO(entity);
+        return MovieAdapter.entityToDTO(entity);
     }
 
     /**
@@ -89,7 +86,7 @@ public class MovieService {
     public MovieDTO getMovieById(Long id) {
         MovieEntity entity = movieRepository.findById(id).orElseThrow(()
                     -> new NoSuchElementException("No element with id: " + id));
-        return movieAdapter.entityToDTO(entity);
+        return MovieAdapter.entityToDTO(entity);
     }
 
     /**
@@ -104,7 +101,7 @@ public class MovieService {
     public MovieDTO updateMovie(MovieDTO dto, MultipartFile small, MultipartFile big) {
         try {
             Set<RoleEntity> roleEntities = roleAdapter.toEntities(dto.getRoleDTO());
-            MovieEntity entity = movieAdapter.dtoToEntity(dto);
+            MovieEntity entity = MovieAdapter.dtoToEntity(dto);
 
             for (RoleEntity r : roleEntities)
                 r.setMovie(entity);
@@ -113,11 +110,11 @@ public class MovieService {
             entity = movieRepository.save(entity);
 
             if (small != null)
-                s3Service.uploadFile(dto.getName() + ".webp", small);
+                s3Service.uploadFile(dto.getName() + SMALL_IMAGE_FILE, small);
             if (big != null)
-                s3Service.uploadFile(dto.getName() + " big.webp", big);
+                s3Service.uploadFile(dto.getName() + BIG_IMAGE_FILE, big);
 
-            return movieAdapter.entityToDTO(entity);
+            return MovieAdapter.entityToDTO(entity);
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
@@ -135,14 +132,14 @@ public class MovieService {
                 () -> new NoSuchElementException("There is no movie with id: " + id)
         );
         movieRepository.delete(entity);
-        s3Service.deleteFileFromS3Bucket(entity.getName() + ".webp");
-        s3Service.deleteFileFromS3Bucket(entity.getName() + " big.webp");
+        s3Service.deleteFileFromS3Bucket(entity.getName() + SMALL_IMAGE_FILE);
+        s3Service.deleteFileFromS3Bucket(entity.getName() + BIG_IMAGE_FILE);
         return "Successfully deleted movie with id: " + id;
     }
 
     public List<MovieDTO> getAllMovies() {
         List<MovieEntity> entities = movieRepository.findCurrentAndUpcomingMovies();
-        return movieAdapter.toDto(entities);
+        return MovieAdapter.toDto(entities);
     }
 
     /**
@@ -155,7 +152,7 @@ public class MovieService {
         List<MovieDTO> dtos = new ArrayList<>();
 
         for (MovieEntity entity : entities) {
-            MovieDTO dto = movieAdapter.entityToDTO(entity);
+            MovieDTO dto = MovieAdapter.entityToDTO(entity);
             try {
                 dto.setRoleDTO(roleService.getRolesForMovie(dto.getMovieID()));
                 dto.setSmallPicture(getPicture(dto.getName()));
@@ -170,7 +167,7 @@ public class MovieService {
 
     private String getPicture(String filename) {
         try {
-            var s3Object = s3Service.getFile(filename + ".webp");
+            var s3Object = s3Service.getFile(filename + SMALL_IMAGE_FILE);
             var content = s3Object.getObjectContent();
             // Read the image content into a byte array
             byte[] bytes = IOUtils.toByteArray(content);
@@ -183,48 +180,12 @@ public class MovieService {
     }
 
     public void saveStartAndEndDates(final MovieDTO dto) {
-        movieRepository.save(movieAdapter.dtoToEntity(dto));
+        movieRepository.save(MovieAdapter.dtoToEntity(dto));
     }
-
-//    public MovieDTO trySaveMovie(MovieDTO dto) {
-//        LocalDate currentDate = dto.getStartTime();
-//        LocalTime time = LocalTime.of(7, 0);
-//        Set<RoleEntity> roleEntities = roleAdapter.toEntities(dto.getRoleDTO());
-//        MovieEntity entity = movieAdapter.dtoToEntity(dto);
-//
-//        for (RoleEntity r : roleEntities)
-//            r.setMovie(entity);
-//        entity.setRoles(roleEntities);
-//
-//        MovieEntity movieEntity = movieRepository.save(entity);
-
-//        for (String s : times) {
-//            System.out.println(LocalTime.parse(s));
-//        }
-
-//        List<HallEntity> halls = hallRepository.findAll();
-//        HallEntity hall = halls.get(0);
-//        while (!currentDate.isAfter(dto.getEndTime())) {
-//            ProjectDTO project = new ProjectDTO();
-//            project.setMovie(dto);
-//            for (HallProjections hp : times) {
-//                project.setHall(hp.getHall());
-//                project.setProjectTime(LocalDateTime.of(currentDate, time));
-//            }
-//            project.setMovie(movieAdapter.dtoToEntity(dto));
-//            project.getMovie().setMovieID(7L);
-//            project.setTime(cTime);
-//            projectRepository.save(project);
-////            System.out.println(cTime);
-//            currentDate = currentDate.plusDays(1);
-//        }
-
-//        return movieAdapter.entityToDTO(entity);
-//        return null;
-//    }
 
     public List<MovieDTO> getMoviesWithoutProjections() {
         List<MovieEntity> movies = movieRepository.findAllWOProjections();
-        return movies.stream().map(movieAdapter::entityToDTO).collect(Collectors.toList());
+        return movies.stream().map(MovieAdapter::entityToDTO).toList();
     }
+
 }
